--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 Django==3.2.6
-social-auth-app-django==5.0.0
+django-allauth==0.45.0
+dj-rest-auth==2.1.11
+
 django-debug-toolbar==3.2.2
 
 djangorestframework==3.12.4
