--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==3.2.6
 django-environ==0.4.5
 django-debug-toolbar==3.2.2
 psycopg2-binary==2.9.1
+django-crum==0.7.9
 
 djangorestframework==3.12.4
 django-rest-swagger==2.2.0
