--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ djangorestframework==3.12.4
 django-rest-swagger==2.2.0
 django-allauth==0.45.0
 dj-rest-auth==2.1.11
+djangorestframework-simplejwt==5.0.0
 
 requests==2.26.0
 
