--- a/requirements.txt
+++ b/requirements.txt
@@ -8,17 +8,24 @@ djangorestframework==3.12.4
 django-rest-swagger==2.2.0
 django-allauth==0.45.0
 dj-rest-auth==2.1.11
-djangorestframework-simplejwt==5.0.0
 
 requests==2.26.0
 
 pytest==6.2.4
+pytest-mock==3.6.1
+factory-boy==3.2.1
+pytest-factoryboy==2.1.0
+
+responses==0.15.0
 pytest-django==4.4.0
 pytest-cov==2.12.1
 pytest-xdist==2.3.0
 coverage==5.5
 
+wemake-python-styleguide==0.15.3
+isort==5.9.3
 flake8==3.9.2
+flake8-debugger==4.0.0
 flake8-coding==1.3.2
 flake8-quotes==3.3.0
 flake8-isort==4.0.0
