Adjust setup.cfg for code style

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,3 @@
-
 [tool:pytest]
 # divide into production and develop
 DJANGO_SETTINGS_MODULE = github_projects_tracker.settings
@@ -16,8 +15,22 @@ show_missing = True
 sort = Cover
 fail_under = 80
 
+[isort]
+line_length = 80
+indent = 4
+# add a trailing comma to the end of from imports
+include_trailing_comma = true
+# use parentheses to handle single imports longer than `line_length`
+use_parentheses = true
+multi_line_output = 3
+# add one line between `import abc` and `from abc import ABC`
+lines_between_types = 1
+# split imports to multiline, when 2 or more imports in one line
+force_grid_wrap = 2
+
 [flake8]
 allowed-domain-names=item
+format = wemake
 show-source = True
 statistics = True
 doctests = True
@@ -27,15 +40,53 @@ enable-extensions = G
 accept-encodings = utf-8
 inline-quotes = single
 isort-show-traceback = True
+multiline-quotes = '''
 
+pytest-fixture-no-parentheses = true
 max-imports = 15
 max-line-length = 88
+max-local-variables = 16
 max-methods = 10
 max-module-members = 10
+max-tuple-unpack-length=6
 
 ignore =
   # C101: Coding magic comment not found
   C101,
+  # D100: Missing docstring in public module
+  D100,
+  # D101: Missing docstring in public class
+  D101,
+  # D102: Missing docstring in public method
+  D102,
+  # D103: Missing docstring in public function
+  D103,
+  # D104: Missing docstring in public package
+  D104,
+  # D106:  Missing docstring in public nested class
+  D106,
+  # D107:  Missing docstring in __init__
+  D107,
+  # DAR101: The docstring was not parsed correctly due to a syntax error
+  DAR101,
+  # DAR201: The docstring is missing a return from definition
+  DAR201,
+  # DAR401: The docstring is missing an exception raised
+  DAR401,
+  # WPS114 Found underscored name pattern
+  WPS114,
+  # WPS305: Found `f` string
+  WPS305,
+  # WPS306: Found class without a base class
+  WPS306,
+  # WPS323: Found `%` string formatting
+  WPS323,
+  # WPS410: Found wrong metadata variable
+  WPS410,
+  # WPS412: Found __init__.py module with logic
+  WPS412,
+  # WPS432 Found magic number: 80
+  WPS432,
   # W503:  line break before binary operator
   W503,
 
@@ -45,3 +96,15 @@ exclude =
   /*/migrations/*,
   settings.py,
   manage.py,
+per-file-ignores =
+  */test*.py:
+  # S101: Use of assert detected
+  S101,
+  # S106: Possible hardcoded password: 'password'
+  S106,
+  # WPS214: Found too many methods
+  WPS214,
+  # WPS226: Found string constant over-use: 'some string'
+  WPS226,
+  # WPS437: Found protected attribute usage
+  WPS437
