Omit test files for coverage

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ python_files = test_*.py
 [coverage:run]
 branch = True
 source = .
-omit = *migrations*, tests*, manage.py, *github_projects_tracker*
+omit = *migrations*, test*, manage.py, *github_projects_tracker*
 data_file = .tests_reports/.coverage
 
 [coverage:report]
