--- a/github_projects_tracker/.env
+++ b/github_projects_tracker/.env
@@ -12,5 +12,6 @@ POSTGRES_PASSWORD=postgres
 POSTGRES_HOST=db
 POSTGRES_PORT=5432
 
-# ===GITHUB AUTHENTICATION SYSTEM===
+# ===GITHUB===
+ORGANIZATION=your_organization_github_name
 CALLBACK_URL=http://localhost:8000/accounts/github/login/callback/
